# real_time_crypto_dashboard

./: .gitignore  README.md
docker-compose/: Makefile  dashboard-pipeline-live.yaml  data-backfill-historical.yaml  redpanda.yml
services/candles/: Dockerfile  Makefile  README.md  pyproject.toml  trades_to_candles.py
services/candles/config/: config.py
services/candles/config/env/: settings.env
services/candles/state/candles_consumer_group/tumbling_window_10000_reduce/trades/0/: IDENTITY  LOG  MANIFEST-000005
services/candles/state/candles_consumer_group/tumbling_window_180000_reduce/trades/0/: IDENTITY  LOG  MANIFEST-000005
services/candles/state/candles_consumer_group/tumbling_window_30000_reduce/trades/0/: IDENTITY  LOG  (+1 more)
services/dashboard/: Dockerfile  Makefile  README.md  dashboard_run.py  pyproject.toml
services/dashboard/config/: config.py
services/dashboard/config/env/: historical.settings.env  settings.env
services/dashboard/utils/: date_converter.py  feature_reader.py
services/feature_store/: Dockerfile  Makefile  README.md  pyproject.toml  run.py
services/feature_store/config/: config.py
services/feature_store/config/env/: historical.settings.env  live.settings.env  settings.env
services/feature_store/utils/: sinks.py
services/trades_ingestion/: Dockerfile  Makefile  README.md  etl_pipeline.py  pipeline.py  pyproject.toml
services/trades_ingestion/api/: mock.py  rest.py  trade.py  websocket.py
services/trades_ingestion/config/: config.py
services/trades_ingestion/config/env/: historical.settings.env  settings.env
(+42 files in other folders)
