[project]
name = "dashboard"
version = "0.1.0"
description = "Runs the streamlit dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hopsworks>=4.1.4",
    "loguru>=0.7.3",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.6",
    "streamlit>=1.42.2",
    "plotly>=6.0.0",
]
