[project]
name = "trades-ingestion"
version = "0.1.0"
description = "Reads in trades from the Kraken API (either form REST historic trades or from the Websocket for live trades)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "loguru>=0.7.3",
    "quixstreams>=3.8.1",
    "pydantic>=2.10.6",
    "websocket-client>=1.8.0",
]
